--- a/index.html
+++ b/index.html
@@ -33,6 +33,52 @@
             </div>
         </div>
     </header>
+    <section class="section__partner">
+        <div class="container">
+            <h2 class="partner__caption">Meet a partner for your best holiday</h2>
+            <ul class="partner__card-list">
+                <li class="partner__card-list-item">
+                    <div class="partner__card-wrapper partner__photo-01">
+                        <img src="./images/main/section-partner/photo-01.png" alt="man photo"
+                            class="partner__card-image" width="122" height="122">
+                    </div>
+                    <h3 class="partner__card-title">Bradley Hunter</h3>
+                    <p class="partner__card-description">Based in Chicago. I love playing tennis and loud music.</p>
+                </li>
+                <li class="partner__card-list-item">
+                    <div class="partner__card-wrapper partner__photo-02">
+                        <img src="./images/main/section-partner/photo-02.png" alt="man photo"
+                            class="partner__card-image" width="122" height="122">
+                    </div>
+                    <h3 class="partner__card-title">Lucas Marsha</h3>
+                    <p class="partner__card-description">I get my inspiration from nature and objects around me. I have
+                        a passion to colours, typography and skateboards.</p>
+                </li>
+                <li class="partner__card-list-item">
+                    <div class="partner__card-wrapper partner__photo-03">
+                        <img src="./images/main/section-partner/photo-03.png" alt="girl photo"
+                            class="partner__card-image" width="122" height="122">
+                    </div>
+                    <h3 class="partner__card-title">Heather Walker</h3>
+                    <p class="partner__card-description">I'm a happy person that loves cats and climbing on mountains.
+                    </p>
+                </li>
+                <li class="partner__card-list-item">
+                    <div class="partner__card-wrapper partner__photo-04">
+                        <img src="./images/main/section-partner/photo-04.png" alt="girl photo"
+                            class="partner__card-image" width="122" height="122">
+                    </div>
+                    <h3 class="partner__card-title">Bradley Hunter</h3>
+                    <p class="partner__card-description">Based in Chicago. I love playing tennis and loud music.</p>
+                </li>
+            </ul>
+            <button class="partner__button">See other partners</button>
+        </div>
+    </section>
+
+
+
+
 </body>
 
 </html>
